# crypto-projects

./: .aes.cpp.swp  .aes.h.swp  .aes_driver.cpp.swp  .gitignore  .makefile.swp  CMakeLists.txt  README.md  aes.cpp  aes.h  aes_driver.cpp  command  commands  input  input2  install.sh  makefile  submit.sh  ttt.ttt  unlockInput  unlockInput2
AES_part/: aes.cpp  aes_driver.cpp
CAfiles/: CApk.txt  CAsk.txt
DirectoryToLock/: SharedKeys  a.txt  a.txt.enc  b.txt  b.txt.enc  c.txt  c.txt.enc
DirectoryToUnlock/: CAsig.txt  LockPK.txt  LockSig.txt  SharedKeys  SharedKeys.enc  SharedKeys.enc.sig  SharedKeys.tmp  a.txt.enc  a.txt.tag  b.txt.enc  b.txt.tag  c.txt.enc  c.txt.tag
Extra_files/: b.txt
KeyGenPart/: PK.txt  SK.txt  Sig.txt
LockingPartyFiles/: CertSignature.txt  LockSK.txt  PublicKey.txt  SecretKey.txt
MAC_part/: MAC.cpp  aes.cpp  cbc_mac  commands  foo  key  mac  message  message2
RSA_part/: KeyGen.cpp  PK  SK  driver.cpp  keygen  main.cpp  makefile  rsa  rsa.cpp  rsa.h
UnlockingPartyFiles/: CertSignature.txt  PublicKey.txt  SecretKey.txt  UnlockPK.txt  UnlockSK.txt  UnlockSig.txt
files/: PK  PK.key  PK.txt  PKK  SK  SK.key  SK.txt  SKK  cipher  cypher.txt  key  key.txt  message  message.txt  message2.txt  message3.txt  message4.txt  newMessage.txt  plain  sig.txt  sigg.txt  siggg.txt  signature.txt  tag
include/: aes.h  lock.h  mac.h  rsa.h  sig.h
src/: KeyGen.cpp  LockDriver.cpp  MAC.cpp  aes.cpp  aesDriver.cpp  certDriver.cpp  certGen.cpp  ecb.cpp  lock.cpp  macDriver.cpp  rsa.cpp  rsaDriver.cpp  sig.cpp  sigDriver.cpp  unlock.cpp
